tests/ui/cve/cve_2020_35881/cve_2020_35881_cross_fn.stderr
error: wrong assumption of fat pointer layout
  --> tests/ui/cve/cve_2020_35881/cve_2020_35881_cross_fn.rs:12:14
   |
LL |     unsafe { transmute_ptr(val) }
   |              ^^^^^^^^^^^^^^^^^^
   |              |
   |              ptr transmute here
   |              try to get data ptr from first 8 bytes here
   |
   = help: the Rust Compiler does not expose the layout of fat pointers
   = note: `#[deny(rpl::wrong_assumption_of_fat_pointer_layout)]` on by default

error: wrong assumption of fat pointer layout
  --> tests/ui/cve/cve_2020_35881/cve_2020_35881_cross_fn.rs:17:14
   |
LL |     unsafe { transmute_mut_ptr(val) }
   |              ^^^^^^^^^^^^^^^^^^^^^^
   |              |
   |              ptr transmute here
   |              try to get data ptr from first 8 bytes here
   |
   = help: the Rust Compiler does not expose the layout of fat pointers

error: aborting due to 2 previous errors

